# OPaint

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
include/: shader.h  shaders.h  window.h
src/: main.cpp  shader.cpp  shaders.cpp  window.cpp
